--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ version = project.version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		url = 'https://jitpack.io'
+	}
+	maven { url = "https://api.modrinth.com/maven" }
+	maven { url = "https://mvn.devos.one/snapshots/" }
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
@@ -28,6 +28,11 @@ dependencies {
 	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
 	// Quilted Fabric API will automatically pull in the correct QSL version.
 	modImplementation libs.quilted.fabric.api
+
+	//modImplementation(include('com.github.GregTech-Intergalactical.TesseractAPI:TesseractAPI-tesseract-fabric:0c714de821')){
+	//	exclude group: "net.fabricmc.fabric-api"
+	//	exclude group: "net.fabricmc", module: "fabric-loader"
+	//}
 }
 
 processResources {
