--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'maven-publish'
-	alias(libs.plugins.quilt.loom)
+	id 'org.quiltmc.loom' version '0.12.+'
 }
 
 archivesBaseName = project.archives_base_name
@@ -18,21 +18,22 @@ repositories {
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
-	minecraft libs.minecraft
-	mappings loom.layered {
-		addLayer quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2")
-		// officialMojangMappings() // Uncomment if you want to use Mojang mappings as your primary mappings, falling back on QM for parameters and Javadocs
-	}
-	modImplementation libs.quilt.loader
+	minecraft "com.mojang:minecraft:${minecraft_version}"
+	dependencies {
+		mappings(loom.layered {
+			addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${minecraft_version}+build.${quilt_mappings}:v2"))
+		})}
+	modImplementation "org.quiltmc:quilt-loader:${project.loader_version}"
 
 	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
 	// Quilted Fabric API will automatically pull in the correct QSL version.
-	modImplementation libs.quilted.fabric.api
+	modImplementation("org.quiltmc.quilted-fabric-api:quilted-fabric-api:${qfapi_version}-${minecraft_version}")
 
-	//modImplementation(include('com.github.GregTech-Intergalactical.TesseractAPI:TesseractAPI-tesseract-fabric:0c714de821')){
-	//	exclude group: "net.fabricmc.fabric-api"
-	//	exclude group: "net.fabricmc", module: "fabric-loader"
-	//}
+	include modImplementation("com.github.GregTech-Intergalactical.TesseractAPI:TesseractAPI-tesseract-fabric:6497f337ef") {
+		exclude(group: "net.fabricmc", module: "fabric-loader")
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+
 }
 
 processResources {
