--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,9 @@ version = 0.1
 maven_group = io.github.cocona20xx
 archives_base_name = technotriage
 
-# Dependencies are managed at gradle/libs.versions.toml
+# Dependencies
+minecraft_version=1.18.2
+quilt_mappings=22
+loader_version=0.16.1
+qfapi_version=1.0.0-beta.14+0.51.1
+
